--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.17",
     "@vercel/analytics": "^1.5.0",
+    "dotenv": "^17.0.0",
     "next": "15.1.5",
+    "nodemailer": "^7.0.4",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
     "react-icons": "^5.4.0"
